--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body>
+<body id="fondo">
     <header>
         <div class="header_aviso">
             <img src="imagenes/instragramicono.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
@@ -51,6 +51,18 @@
             <li><img src="imagenes/portamacetamadera23.png" alt=""></li>
             <li><img src="imagenes/portamaceta.jpg" alt=""></li>
         </ul>
+    </div>
+
+    <div class="mensajes">
+        <div>
+        <h3>Envios a todo el pais</h3>
+        </div>
+        <div>
+        <h3>3 y 6 cuotas sin interes</h3>
+        </div>
+        <div>
+        <h3> Cambios y devoluciones</h3>
+        </div>
     </div>
 
 
