Aca le hice modificaciones a mi proyecto

--- a/Pages/Ayuda.html
+++ b/Pages/Ayuda.html
@@ -95,9 +95,9 @@
             <div class="PiePagina">
                 <h2>Visita Nuestras Redes</h2>
                 <br>
-                <img src="../imagenes/facebookicono.png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
-                <img src="../Imagenes/twittericono.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
-                <img src="../Imagenes/instragramicono.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
+                <img src="../imagenes/facebookicono2 (2).png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
+                <img src="../Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
+                <img src="../Imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
                 <br>
                 <div class="PiePagina_Subs_mensaje">
                     <h3 class="hola">Subscribite para recibir novedades!</h3>
