--- a/index.html
+++ b/index.html
@@ -65,41 +65,48 @@
         </div>
     </div>
 
-
-    <div class="Galeria">
-        <div class="Galeria_container" >
-            <img src="Imagenes/Coleccionmaceta.jpg" alt="Productos" class="Galeria_container_foto" ><!--imagenes de los productos-->
-            <h2 class="Galeria_container_titulo">Coleccion Maceta</h2>
+    <h2 class="lonuevo"> LO NUEVO</h2>
+<div class="Container_fotos">
+        <div>
+        <img src="imagenes/Amongus.jpg" alt=""><br><br><p class="descripcion">Figura "Among Us" <br><span>$400</span></p>
         </div>
-        <div class="Galeria_container">    
-            <img src="Imagenes/CuadroMapa.jpg" alt="Productos2" class="Galeria_container_foto"><!--imagenes de los productos-->
-            <h2 class="Galeria_container_titulo">Cuadro Mapa</h2>
+        <div>
+        <img src="imagenes/macetavaca.jpg" alt=""><br><br><p class="descripcion">Maceta "Vaca" <br> <span>$600</span></p>
         </div>
-        <div class="Galeria_container" >
-            <img src="Imagenes/MacetaMilo.jpg" alt="Productos" class="Galeria_container_foto" ><!--imagenes de los productos-->
-            <h2 class="Galeria_container_titulo">Maceta "Milo"</h2>
+        <div>
+        <img src="imagenes/MacetaFlores.jpg" alt=""><br><br><p class="descripcion">Maceta "Flores" <br> <span>$600</span></p>
         </div>
-        <div class="Galeria_container">    
-            <img src="Imagenes/macetaharry.jpg" alt="Productos3" class="Galeria_container_foto"><!--imagenes de los productos-->
-            <h2 class="Galeria_container_titulo">Maceta Harry Potter</h2>
+        <div>
+        <img src="imagenes/Macetaharry.jpg" alt=""><br><br><p class="descripcion">Maceta "Harry Potter" <br> <span>$700</span></p>
         </div>
-        <div class="Galeria_container">  
-            <img src="Imagenes/velamano.jpg" alt="Productos5"class="Galeria_container_foto"><!--imagenes de los productos-->     
-            <h2 class="Galeria_container_titulo">Porta Vela "Vano"</h2>
+        <div>
+        <img src="imagenes/MacetaMilo.jpg" alt=""><br><br><p class="descripcion">Maceta "MILO" <br> <span>$600</span></p>
         </div>
-        <div class="Galeria_container">  
-            <img src="Imagenes/Macetapaisaje.jpg" alt="Productos5"class="Galeria_container_foto"><!--imagenes de los productos-->     
-            <h2 class="Galeria_container_titulo">Maceta "Paisaje"</h2>
+        <div>
+        <img src="Imagenes/Macetasimpson.jpg" alt=""><br><br><p class="descripcion">Maceta XL "Los Simpson" <br> <span>$900</span></p>
         </div>
-        <div class="Galeria_container">  
-            <img src="Imagenes/macetavaca.jpg" alt="Productos5"class="Galeria_container_foto"><!--imagenes de los productos-->     
-            <h2 class="Galeria_container_titulo">Coleccion Maceta</h2>
-        </div>
-        <div class="Galeria_container">  
-            <img src="Imagenes/Amongus2.jpg" alt="Productos5"class="Galeria_container_foto"><!--imagenes de los productos-->     
-            <h2 class="Galeria_container_titulo">Muñecos "Among us"</h2>
-        </div>
+</div>
+<h2 class="lonuevo"> OFERTAS </h2>
+<div class="Container_fotos">
+    <div>
+    <img src="imagenes/Coleccionmaceta.jpg" alt=""><br><br><p class="descripcion">Coleccion Maceta "Animales"<br><del>$1800</del> <br><span>$1500</span></p>
     </div>
+    <div>
+    <img src="imagenes/Macetapaisaje.jpg" alt=""><br><br><p class="descripcion">Maceta "Paisaje" <br><del>$600</del><br> <span>$400</span></p>
+    </div>
+    <div>
+    <img src="imagenes/velamano.jpg" alt=""><br><br><p class="descripcion">Porta Vela "Mano" <br><del>$900</del> <br> <span>$600</span></p>
+    </div>
+    <div>
+    <img src="imagenes/portavela vaceros.jpg" alt=""><br><br><p class="descripcion">Porta vela de hierro <br> "Vaqueros" <br> <del>$1200</del><br><span>$900</span></p>
+    </div>
+    <div>
+    <img src="imagenes/macetasrusticas.jpg" alt=""><br><br><p class="descripcion">Macetas "Rusticas" <br><del>$1000</del><br> <span>$700</span></p>
+    </div>
+    <div>
+    <img src="Imagenes/macetavela2.jpg" alt=""><br><br><p class="descripcion">Maceta Porta vela <br> <del>$1800</del><br><span>$900</span></p>
+    </div>
+</div>
 
     <br><br><br><br><br>
     <footer>
@@ -107,14 +114,14 @@
             <div class="PiePagina">
                 <h2>Visita Nuestras Redes</h2>
                 <br>
-                <img src="imagenes/facebookicono.png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
-                <img src="Imagenes/twittericono.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
-                <img src="Imagenes/instragramicono.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
+                <img src="imagenes/facebookicono2 (2).png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
+                <img src="Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
+                <img src="Imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
                 <br>
                 <div class="PiePagina_Subs_mensaje">
                     <h3 class="hola">Subscribite para recibir novedades!</h3>
                     <form action="Procesar.php"method="post"enctype=""></form>
-                    <input type="email"name="Correo" placeholder="Ingrese tu Correo Electronico">
+                    <input type="email"name="Correo" placeholder="Ingrese tu Correo Electronico" class="email">
                     <input type="submit" value="Enviar">
                 </div>
                 <br><br><br>
