--- a/Pages/Seguimiento.html
+++ b/Pages/Seguimiento.html
@@ -44,28 +44,31 @@
     </nav>
     </div>
     </header>
-    <section class="fuente"><!--Primer Numero de seguimiento(OCA)-->
+<div class="conteiner_ayuda">
+    <div class="fuente"><!--Primer Numero de seguimiento(OCA)-->
         <br><br>
         <h2>Tengo un N° de Seguimiento de OCA</h2><br>
         <p>Podes encontrar el numero de seguimiento en el email que se te envio el dia de la compra</p><br>
-        <label for="Numeroseguimiento">N° de seguimiento de OCA</label>
+        <label for="Numeroseguimiento"><p>N° de seguimiento de OCA</p></label>
         <input type="number" name="Numeroseguimiento" id="Numeroseguimiento"placeholder="N° de seguimiento">
-        <br><p>El numero de seguimiento contiene 20 digitos numericos y comienza con 45862.Ejemplo: 458620000999</p>
-    </section>
-    <section class="fuente"><!--Segundo numero de seguimiento(Jano)-->
+        <br><p class="ejemplo">El numero de seguimiento contiene 20 digitos numericos y comienza con 45862.Ejemplo: 458620000999</p>
+    </div>
+    <br><br><br>
+    <div class="fuente"><!--Segundo numero de seguimiento(Jano)-->
         <h2>Tengo un Numero de pedido de Jano Decoraciones</h2><br>
-        <label for="NumeroseguimientoJano">N° de seguimiento de Jano Decoraciones</label>
+        <label for="NumeroseguimientoJano"><p>Numero de Seguimiento JANO:</p></label>
         <input type="number" name="NumeroJano" id="NumerosegumientoJano" placeholder="N° de Seguimiento">
-    </section>
+    </div>
+</div>
 <br><br><br><br><br><br><br>
 <footer>
-    <section >
+    <div >
         <div class="PiePagina">
             <h2>Visita Nuestras Redes</h2>
             <br>
-            <img src="../imagenes/facebookicono.png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
-            <img src="../Imagenes/twittericono.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
-            <img src="../Imagenes/instragramicono.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
+            <img src="../imagenes/facebookicono2 (2).png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
+            <img src="../Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
+            <img src="../Imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
             <br>
             <div class="PiePagina_Subs_mensaje">
                 <h3 class="hola">Subscribite para recibir novedades!</h3>
@@ -80,7 +83,7 @@
                 <a href="Ayuda">Ayuda</a>
             </div>
         </div>
-    </section>        
+    </div>        
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
