--- a/Pages/Ayuda.html
+++ b/Pages/Ayuda.html
@@ -91,28 +91,42 @@
 
 
     <footer>
-        <section >
-            <div class="PiePagina">
-                <h2>Visita Nuestras Redes</h2>
+        <div class="PiePagina">
+            <h2>Visita Nuestras Redes</h2>
+            <div class="conteiner_redes" >
                 <br>
+                <div>
                 <img src="../imagenes/facebookicono2 (2).png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
+                </div>
+                <div>
                 <img src="../Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
+                </div>
+                <div>
                 <img src="../Imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
+                </div>
                 <br>
+            </div>
+                <div class="hola">
+                <h3 >Subscribite para recibir novedades!</h3>
+                </div>
                 <div class="PiePagina_Subs_mensaje">
-                    <h3 class="hola">Subscribite para recibir novedades!</h3>
                     <form action="Procesar.php"method="post"enctype=""></form>
-                    <input type="email"name="Correo" placeholder="Ingrese tu Correo Electronico">
+                    <input type="email"name="Correo" placeholder="Ingrese tu Correo Electronico"><br>
                     <input type="submit" value="Enviar">
                 </div>
                 <br><br><br>
-                <div>
+                <div class="mensajesFinales">
                     <a href="Quienes Somos">Quienes Somos</a>
                     <a href="Preguntas Frecuentes">Preguntas Frecuentes</a>
                     <a href="Ayuda">Ayuda</a>
                 </div>
-            </div>
-        </section>        
+                <br>
+                <div class="derechosdeautor">
+                    <p> ®2021 JANODEC- Todos los derechos reservados</p>
+
+
+                </div>
+        </div>        
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
