--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -30,6 +30,12 @@
                 <input type="search" name="Buscar" id="" placeholder="¿Que estas buscando?">  
             </form>
         </div>
+        <div>
+            <img src="../Imagenes/carroblanco.png" alt="carritoCompra" class="carritoCompra">
+        </div>
+        <div>
+            <img src="../Imagenes/cuenta.png" alt="" class="carritoCompra">
+        </div>
     </div>
     <div class="Header_navbar">
     <nav class="menu" >
@@ -51,7 +57,7 @@
     </div>
     <br>
     
-    <div id="tiendaCategorias">
+    <!-- <div id="tiendaCategorias">
         <ul>
             <li><a href:="Categorias">Macetas</a></li>
             <li><a href:="Categorias">Cuadros</a></li>
@@ -60,16 +66,9 @@
             <li><a href:="Categorias">Lapiceros</a></li>
             <li><a href:="Categorias">Personalizados</a></li>
         </ul>
-    </div>
-    <br><br><br>
-    <section class="filtro">
-        <img src="Icono filtros" alt="Icono de filtros">
-        <label for="Buscar"></label>
-        <input type="search" name="Buscar" id="Buscar" placeholder="Buscar">  
-    </section>
-    <br><br><br>
-    <h2 class="secciones"> Macetas</h2>
-    <section class="flex-container"><!--Imagenes de los productos(1)-->
+    </div> -->
+    <!-- <h2 class="secciones"> Macetas</h2>
+    <section class="flex-container">
         <div>
             <img src="../Imagenes/Groot.jpg" alt="produto1"class="producto1">
             <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
@@ -79,7 +78,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>    
-        <div class=><!--Imagenes de los productos(2)-->
+        <div class=>
             <img src="../Imagenes/MacetaFlores.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -88,7 +87,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-        <div class=><!--Imagenes de los productos(3)-->
+        <div class=>
             <img src="../Imagenes/macetallama.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -101,7 +100,7 @@
     <br><br>
     <h2 class="secciones">Cuadros</h2>
     <section class="flex-container">
-        <div class=><!--Imagenes de los productos(4)-->
+        <div class=>
             <img src="../Imagenes/MacetaLilo.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -110,7 +109,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-        <div class=><!--Imagenes de los productos(5)-->
+        <div class=>
             <img src="../Imagenes/MacetaMilo.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -119,7 +118,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-        <div class=><!--Imagenes de los productos(2)-->
+        <div class=>
             <img src="../Imagenes/CuadroMapa.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -131,8 +130,8 @@
     </section>
     <br><br>
     <h2 class="secciones">Ofertas</h2>       
-    <section class="flex-container">
-        <div class=><!--Imagenes de los productos(2)-->
+    <div class="flex-container">
+        <div class=>
             <img src="../Imagenes/macetaconejo.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -141,7 +140,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-        <div class=><!--Imagenes de los productos(2)-->
+        <div class=>
             <img src="../Imagenes/Macetasimpson.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -150,7 +149,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-        <div class=><!--Imagenes de los productos(2)-->
+        <div class=>
             <img src="../Imagenes/Velas.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -159,11 +158,11 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-    </section>
+    </div>
     <br><br>
     <h2 class="secciones">Personalizados</h2>
     <section class="flex-container">
-        <div class=><!--Imagenes de los productos(2)-->
+        <div class=>
             <img src="../Imagenes/Amongus.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -172,7 +171,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-        <div class=><!--Imagenes de los productos(2)-->
+        <div class=>
             <img src="../Imagenes/Macetaharry.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -181,7 +180,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-        <div class=><!--Imagenes de los productos(2)-->
+        <div class=>
             <img src="../Imagenes/Macetapaisaje.jpg" alt="Producto2" class="producto1">
             <p>Descripcion del Producto</p>
             <form action="number">
@@ -190,7 +189,7 @@
             <input type="button" value="Añadir al carrito">
             </form>
         </div>
-    </section>
+    </section> -->
 
 
 
