--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
             <img  src="imagenes/facebookicono.png"class="header_aviso_facebook"><!--Aca van los iconos de las redes sociales-->
             <p class="header_aviso_promocion">15% de descuento abonando mediante transferencia/efectivo</p><!--Aca iria un mensaje dinamico cuando hay un dia con promociones bancarias, este se vera reflejado-->
         </div>
-    <div class="Header_Logo">
-        <div class="Header_cont_logo"><!--Logo de la Pagina-->
-            <img src="imagenes/logo_janoblanco.png" alt="IconoJano" class="Header_fotoJano">
+        <div class="Header_Logo">
+            <div class="Header_cont_logo"><!--Logo de la Pagina-->
+                <img src="imagenes/logo_janoblanco.png" alt="IconoJano" class="Header_fotoJano">
+            </div>
+            <div class="header_cont_buscador">
+                <form action="search" method="post" >
+                    <input type="search" name="Buscar" id="" placeholder="¿Que estas buscando?">  
+                </form>
+            </div>
+            <div>
+                <img src="Imagenes/carroblanco.png" alt="carritoCompra" class="carritoCompra">
+            </div>
+            <div>
+                <img src="Imagenes/cuenta.png" alt="" class="carritoCompra">
+            </div>
         </div>
-        <div class="header_cont_buscador">
-            <form action="search" method="post" >
-                <input type="search" name="Buscar" id="" placeholder="¿Que estas buscando?">  
-            </form>
-        </div>
-    </div>
 
     <!-- Barra de navegacion -->
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
