--- a/Pages/Ayuda.html
+++ b/Pages/Ayuda.html
@@ -39,47 +39,67 @@
             </div>
         </div>
     <div class="Header_navbar">
-    <nav class="menu" >
-        <div>
-        <ul>
-            <li><a class="navbar-brand" href="../index.html">Inicio</a></li>
-            <li><a class="navbar-brand"href="Tienda.html">Tienda</a></li>
-            <li><a class="navbar-brand"href="Seguimiento.html">Seguimiento</a></li>
-            <li><a class="navbar-brand" href="Ayuda.html">Ayuda</a></li>
-            <li><a class="navbar-brand" href="Contacto.html">Contacto</a></li>
-        </ul>
-        </div>
-    </nav>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <!-- enlaces -->
+            <div class="collapse navbar-collapse" id="opciones">   
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html"> Inicio</a>
+                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Seguimiento.html">Seguimiento</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Ayuda.html">Ayuda </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Contacto.html">Contacto</a>
+                </li>              
+                </ul>
+            </div>
+        </nav>
+    </div>
     </div>
     </header>
     <br><br>
-    <section class="fuente2" class="listaAyuda">
-        <br>
-            <p>A continuacion, detallaremos la informacion de interés relacionada a tus pedidos:</p>
-        <br>
-        <ul><!--Aca iria una lista con todas las opciones que podria ser de ayuda para el usuario-->
-            <li><a href="Informacion de mi pedido">Informacion de mi pedido</a></li>
-            <li><a href="Preguntas Frecuentes">Preguntas Frecuentes</a></li>
-            <li><a href="Cambios y devoluciones">Cambios y Devoluciones</a></li>
-            <li><a href="Formas de Pago">Formas de Pago</a></li>
-            <li><a href="Medios de Envío">Medios de Envíos</a></li>
-        </ul>
-    </section>
-    <br>
-    <section class="fuente2" class="listaAyuda2">
-        <dd>Asistencia al Cliente</dd><!--Otra lista Orientada al cliente -->
-            <ul>
-                <li><a href="introduccion">Introduccion</a></li>
-                <li><a href="Informacion de mi pedido">Informacion</a></li>
+<!-- MENSAJES DE AYUDA -->
+    <div class="contenedor_ayuda">
+        <div class="listaAyuda">
+            <br>
+                <h5>A continuacion, detallaremos la informacion de interés relacionada a tus pedidos:</h5>
+            <br>
+            <ul><!--Aca iria una lista con todas las opciones que podria ser de ayuda para el usuario-->
+                <li><a href="Informacion de mi pedido">Informacion de mi pedido</a></li>
                 <li><a href="Preguntas Frecuentes">Preguntas Frecuentes</a></li>
-                <li><a href="Cambios y devoluciones">Cambios y devoluciones</a></li>
+                <li><a href="Cambios y devoluciones">Cambios y Devoluciones</a></li>
                 <li><a href="Formas de Pago">Formas de Pago</a></li>
-                <li><a href="Medios de Envio">Medios de Envio</a></li>
+                <li><a href="Medios de Envío">Medios de Envíos</a></li>
             </ul>
-    </section>
-    <section>
+        </div>
+    
+        <br>
+        <div  class="listaAyuda2">
+            <dd>ASISTENCIA AL CLIENTE</dd><!--Otra lista Orientada al cliente -->
+                <ul>
+                    <li><a href="introduccion">Introduccion</a></li>
+                    <li><a href="Informacion de mi pedido">Informacion</a></li>
+                    <li><a href="Preguntas Frecuentes">Preguntas Frecuentes</a></li>
+                    <li><a href="Cambios y devoluciones">Cambios y devoluciones</a></li>
+                    <li><a href="Formas de Pago">Formas de Pago</a></li>
+                    <li><a href="Medios de Envio">Medios de Envio</a></li>
+                </ul>
+        </div>
+    </div>
+    <div>
         <br><br><br><br><br>
-        <div class="containerAyuda"><!--Algunos aviso de la empresa para que los clientes sepan-->
+        <div class="mensajes_ayuda"><!--Algunos aviso de la empresa para que los clientes sepan-->
             <div >
                 <h4>ENVIOS SIN CARGO A PARTIR DE $2000</h4>
             </div>
@@ -90,7 +110,7 @@
                 <h4>PODES PAGAR EN 3 Y 6 CUOTAS</h4>
             </div>
         </div>
-    </section>
+    </div>
 
 
 
@@ -134,7 +154,9 @@
                 </div>
         </div>        
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
