--- a/Pages/Seguimiento.html
+++ b/Pages/Seguimiento.html
@@ -37,36 +37,52 @@
             </div>
         </div>
     <div class="Header_navbar">
-    <nav class="menu" >
-        <div>
-        <ul>
-            <li><a class="navbar-brand" href="../index.html">Inicio</a></li>
-            <li><a class="navbar-brand"href="Tienda.html">Tienda</a></li>
-            <li><a class="navbar-brand"href="Seguimiento.html">Seguimiento</a></li>
-            <li><a class="navbar-brand" href="Ayuda.html">Ayuda</a></li>
-            <li><a class="navbar-brand" href="Contacto.html">Contacto</a></li>
-        </ul>
-        </div>
-    </nav>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <!-- enlaces -->
+            <div class="collapse navbar-collapse" id="opciones">   
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html"> Inicio</a>
+                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Seguimiento.html">Seguimiento</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Ayuda.html">Ayuda </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Contacto.html">Contacto</a>
+                </li>              
+                </ul>
+            </div>
+        </nav>
+    </div>
     </div>
     </header>
-<div class="conteiner_ayuda">
-    <div class="fuente"><!--Primer Numero de seguimiento(OCA)-->
+<div class="contenedor_seguimiento">
+    <div class="seguimiento_oca"><!--Primer Numero de seguimiento(OCA)-->
         <br><br>
         <h2>Tengo un N° de Seguimiento de OCA</h2><br>
         <p>Podes encontrar el numero de seguimiento en el email que se te envio el dia de la compra</p><br>
         <label for="Numeroseguimiento"><p>N° de seguimiento de OCA</p></label>
         <input type="number" name="Numeroseguimiento" id="Numeroseguimiento"placeholder="N° de seguimiento">
+        <br>
         <br><p class="ejemplo">El numero de seguimiento contiene 20 digitos numericos y comienza con 45862.Ejemplo: 458620000999</p>
     </div>
-    <br><br><br>
-    <div class="fuente"><!--Segundo numero de seguimiento(Jano)-->
-        <h2>Tengo un Numero de pedido de Jano Decoraciones</h2><br>
-        <label for="NumeroseguimientoJano"><p>Numero de Seguimiento JANO:</p></label>
+    <div class="seguimiento_jano"><!--Segundo numero de seguimiento(Jano)-->
+        <h2>Tengo un Numero de pedido de Jano Decoraciones</h2><br><br>
+        <label for="NumeroseguimientoJano"><p>N° de Seguimiento JANO:</p></label>
         <input type="number" name="NumeroJano" id="NumerosegumientoJano" placeholder="N° de Seguimiento">
     </div>
 </div>
-<br><br><br><br><br><br><br>
+<br><br><br><br><br>
 <footer>
     <div class="PiePagina">
         <h2>Visita Nuestras Redes</h2>
@@ -105,6 +121,9 @@
             </div>
     </div>        
 </footer>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
