--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -38,24 +38,186 @@
         </div>
     </div>
     <div class="Header_navbar">
-    <nav class="menu" >
-        <div>
-        <ul>
-            <li><a class="navbar-brand" href="../index.html">Inicio</a></li>
-            <li><a class="navbar-brand"href="Tienda.html">Tienda</a></li>
-            <li><a class="navbar-brand"href="Seguimiento.html">Seguimiento</a></li>
-            <li><a class="navbar-brand" href="Ayuda.html">Ayuda</a></li>
-            <li><a class="navbar-brand" href="Contacto.html">Contacto</a></li>
-        </ul>
-        </div>
-    </nav>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <!-- enlaces -->
+            <div class="collapse navbar-collapse" id="opciones">   
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html"> Inicio</a>
+                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Seguimiento.html">Seguimiento</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Ayuda.html">Ayuda </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Contacto.html">Contacto</a>
+                </li>              
+                </ul>
+            </div>
+        </nav>
     </div>
     </header>
+    <div class="contenedor_tienda">
+        <main class="categorias">
+            <ul>
+                <dd>CATEGORIAS</dd>
+                <li>
+                    <a href="#"> Macetas</a>
+                </li>
+                <li>
+                    <a href="#"> Cuadros</a>
+                </li>
+                <li>
+                    <a href="#"> Lapiceros</a>
+                </li>
+                <li>
+                    <a href="#"> Muñecos</a>
+                </li>
+                <li>
+                    <a href="#"> Box Infantil </a>
+                </li>
+                <li>
+                    <a href="#"> Personalizados</a>
+                </li>
+                <li>
+                    <a href="#"> Porta Macetas</a>
+                </li>
+            </ul>
+        </main>
 
-    <div class="banner">
+        <div class="filtro">
+            <input type="search" name="buscar" placeholder="Buscar">
+            <a href="../Imagenes/filtro.png" alt="iconofiltro"></a>
+        </div>
+<!-- Productos -->
+        <div class="Productos">
+            <img src="../Imagenes/Groot.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/lapicero.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/macetaflor2.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/macetasmilox2.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/macetasrusticas.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/combomacetaschicas.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/velamano.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/Velas2.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/Velas3.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+        <div class="Productos">
+            <img src="../Imagenes/portamacetamadera.jpg" alt="produto1"class="producto1">
+            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+            <form action="number">
+            <label for="Cantidades">Cant</label>
+            <input type="number" name="Cantidades" id="Cantidades">
+            <input type="button" value="Añadir al carrito">
+            </form>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+    <!-- <div class="banner">
         <img src="../Imagenes/3y6cuotas.png" alt="Imagen con promociones" class="bannerPromociones" >
     </div>
-    <br>
+    <br> -->
     
     <!-- <div id="tiendaCategorias">
         <ul>
@@ -239,7 +401,9 @@
 
 
 
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
