Cambios en el proyecto

--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -99,105 +99,123 @@
             <a href="../Imagenes/filtro.png" alt="iconofiltro"></a>
         </div>
 <!-- Productos -->
-        <div class="Productos">
-            <img src="../Imagenes/Groot.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos1">
+    <img src="../Imagenes/Groot.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/lapicero.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos2">
+    <img src="../Imagenes/lapicero.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/macetaflor2.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos3">
+    <img src="../Imagenes/macetaflor2.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/macetasmilox2.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos4">
+    <img src="../Imagenes/macetasmilox2.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/macetasrusticas.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos5">
+    <img src="../Imagenes/macetasrusticas.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/combomacetaschicas.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos6">
+    <img src="../Imagenes/combomacetaschicas.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/velamano.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos7">
+    <img src="../Imagenes/velamano.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/Velas2.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos8">
+    <img src="../Imagenes/Velas2.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/Velas3.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos9">
+    <img src="../Imagenes/Velas3.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
-        <div class="Productos">
-            <img src="../Imagenes/portamacetamadera.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
+<div class="Productos10">
+    <img src="../Imagenes/portamacetamadera.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
+<div class="Productos11">
+    <img src="../Imagenes/CuadroMontaña.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
+<div class="Productos12">
+    <img src="../Imagenes/lapicerogato.jpg" alt="produto1"class="producto1">
+    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <form action="number">
+    <label for="Cantidades">Cant</label>
+    <input type="number" name="Cantidades" id="Cantidades">
+    <input type="button" value="Añadir al carrito">
+    </form>
+</div>
 
 
 
@@ -212,7 +230,8 @@
 
 
 
-    </div>
+
+</div>
 
     <!-- <div class="banner">
         <img src="../Imagenes/3y6cuotas.png" alt="Imagen con promociones" class="bannerPromociones" >
